Fixed the visible navigation bar at the main screen (happened on some browsers)

--- a/web/css/mp.css
+++ b/web/css/mp.css
@@ -27,6 +27,7 @@ div {
 
 .mp_hidden {
     visibility: hidden;
+    height: 0px !important;
 }
 
 .right_end {
